Initial rework of DAL
